# Multicolor-Comp

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  build_macos.sh  build_windows.bat  build_windows.sh
binaries/: README.md
binaries/Multi-Color Comp.vst3/Contents/Resources/: moduleinfo.json
src/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: ColorModule.cpp  ColorModule.h  CompressorModule.cpp  CompressorModule.h  RouterModule.cpp  RouterModule.h  Smoothing.cpp  Smoothing.h  SootheModule.cpp  SootheModule.h
src/ui/: ModernKnob.cpp  ModernKnob.h  ModernLookAndFeel.cpp  ModernLookAndFeel.h
tests/: CMakeLists.txt  CompressorTest.cpp
